--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -11,6 +11,6 @@
     = f.number_field :cart_id
   .field
     = f.label :state
-    = f.number_field :state
+    = f.text_field :state
   .actions
     = f.submit 'Save'
