--- a/app/views/user_mailer/order_confirmation.html.haml
+++ b/app/views/user_mailer/order_confirmation.html.haml
@@ -38,19 +38,24 @@
   %dd
     =@order.state
 
+%dl.dl-horizontal
+  %dt Ссылка для отслеживания
+  %dd
+    ="/orders/#{@order.secure_key}"
+
 %table.table
   -@order.cart.cart_items.all.each do |item|
     %tr
       %td
-        =link_to product_path(item.product.id) do
+        =link_to product_path(item.product) do
           =image_tag item.product.images.first.image.url(:thumb)
       %td
-        =link_to item.product.name, product_path(item.product.id)
+        =link_to item.product.name, product_path(item.product)
       %td
         %small
-          = number_to_currency(item.product.price, unit:"руб.", :delimiter => " ", :format => "%n %u", :precision => 0)
+          = item.product.price_str
       %td
         =item.quantity
       %td
         %small
-          = number_to_currency(item.product.price*item.quantity, unit:"руб.", :delimiter => " ", :format => "%n %u", :precision => 0)
+          = item.product.price_str(item.quantity)
