--- a/app/views/user_mailer/order_confirmation.html.haml
+++ b/app/views/user_mailer/order_confirmation.html.haml
@@ -1,61 +1,66 @@
-%dl.dl-horizontal
-  %dt Имя
-  %dd
-    =@order.name
+!!!
+%html
+  %head
+    %meta{:charset => "utf-8"}/
+  %body
+    %dl.dl-horizontal
+      %dt Имя
+      %dd
+        =@order.name
 
-%dl.dl-horizontal
-  %dt e-mail
-  %dd
-    =@order.email
+    %dl.dl-horizontal
+      %dt e-mail
+      %dd
+        =@order.email
 
-%dl.dl-horizontal
-  %dt телефон
-  %dd
-    =@order.phone
+    %dl.dl-horizontal
+      %dt телефон
+      %dd
+        =@order.phone
 
-%dl.dl-horizontal
-  %dt Индекс
-  %dd
-    =@order.zip
+    %dl.dl-horizontal
+      %dt Индекс
+      %dd
+        =@order.zip
 
-%dl.dl-horizontal
-  %dt Город
-  %dd
-    =@order.city
+    %dl.dl-horizontal
+      %dt Город
+      %dd
+        =@order.city
 
-%dl.dl-horizontal
-  %dt Адрес
-  %dd
-    =@order.address
+    %dl.dl-horizontal
+      %dt Адрес
+      %dd
+        =@order.address
 
-%dl.dl-horizontal
-  %dt Коментарий
-  %dd
-    =@order.comment
+    %dl.dl-horizontal
+      %dt Коментарий
+      %dd
+        =@order.comment
 
-%dl.dl-horizontal
-  %dt Статус
-  %dd
-    =@order.state
+    %dl.dl-horizontal
+      %dt Статус
+      %dd
+        =@order.state
 
-%dl.dl-horizontal
-  %dt Ссылка для отслеживания
-  %dd
-    ="/orders/#{@order.secure_key}"
+    %dl.dl-horizontal
+      %dt Ссылка для отслеживания
+      %dd
+        ="/orders/#{@order.secure_key}"
 
-%table.table
-  -@order.cart.cart_items.all.each do |item|
-    %tr
-      %td
-        =link_to product_path(item.product) do
-          =image_tag item.product.images.first.image.url(:thumb)
-      %td
-        =link_to item.product.name, product_path(item.product)
-      %td
-        %small
-          = item.product.price_str
-      %td
-        =item.quantity
-      %td
-        %small
-          = item.product.price_str(item.quantity)
+    %table.table
+      -@order.cart.cart_items.all.each do |item|
+        %tr
+          %td
+            =link_to product_path(item.product) do
+              =image_tag item.product.images.first.image.url(:thumb)
+          %td
+            =link_to item.product.name, product_path(item.product)
+          %td
+            %small
+              = item.product.price_str
+          %td
+            =item.quantity
+          %td
+            %small
+              = item.product.price_str(item.quantity)
