--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -27,7 +27,7 @@ margin-bottom:20px;
 }
 
 .shadow  .name{
-//	height: 45px;
+	height: 45px;
   color: #38B0E3;
   font-weight: bold;
 //  margin-bottom: 4px;
@@ -131,6 +131,6 @@ span.new-price{
 }
 
 .buy_button{
-    max-width:200px;	
-	padding-top: 10px;
+    max-width:150px;	
+//	padding-top: 10px;
 }
