--- a/app/views/admin/categories/_form.html.haml
+++ b/app/views/admin/categories/_form.html.haml
@@ -4,12 +4,13 @@
   %li
     %a(href="#seo" data-toggle="tab") SEO
 
-= simple_form_for [:admin, @category], html: {class: 'form-horizontal' }, wrapper: :bootstrap do |f|
+= simple_form_for [:admin, @category] do |f|
   .tab-content
     .tab-pane.active(id="common")
       = f.input :name
       = f.input :description, as: :ckeditor, input_html: {ckeditor: {toolbar: [{name: 'Edit', items: ['Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ]}, {name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ], items: [ 'Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'RemoveFormat' ]} ]}}
       = f.input :enabled
+      = f.input :external_id
       = f.association :parent
       = f.input :image, as: :image_preview, input_html: {preview_version: :thumb}
 
