--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -92,6 +92,7 @@
         -else
           .col-sm-3
             =render '/categories/smart_tree'
+            =render '/products/smart_filter'
           .col-sm-9
             = yield
 
