--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -9,9 +9,11 @@
 	/ 			=  child.name
 
 -if @products && ! @products.empty?
+	= paginate @products 
 	.row
 		- @products.each do |product|
 			=render "/products/show_item", category: @category, product: product, :cart_item=>@current_cart.cart_items.new(product_id: product.id, quantity:1)
+	= paginate @products 
 -else
 	.row
 		Товары не найдены
