--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -13,7 +13,7 @@ margin-bottom:20px;
   position: relative;
   width: 100%;
 //  float:left;
-  //height: 260px;
+  height: 260px;
 }
 
 .shadow  .price{
@@ -37,7 +37,7 @@ margin-bottom:20px;
 }
 
 .shadow  .image{
-//	height: 150px;
+	height: 150px;
 	padding: 15px;
 }
 
@@ -78,13 +78,13 @@ margin-bottom:20px;
 	left:0px;
 	height:21px;
 }
-
+/*
 .prev, .next{
 	font-size: 3em;
 	padding-left:0.6em;
 	cursor:pointer;
 }
-
+*/
 span.old-price{
   color: #111;
   text-decoration: line-through;
