--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@ $brand-primary: #262668;
 @import "orders";
 @import "products";
 @import "fancybox";
+@import "lightSlider";
 
 @font-face {
   font-family: 'Kelly Slab';
