--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -123,7 +123,7 @@ span.new-price{
 
 .main-img a img {
     width: 100%;
-    max-width: 300px;
+/*    max-width: 300px;*/
     padding: 5px;
     margin-left: auto;
     margin-right: auto;
