--- a/app/views/categories/_smart_tree.html.haml
+++ b/app/views/categories/_smart_tree.html.haml
@@ -2,19 +2,19 @@
 	.panel-heading
 		Категории
 	%ul.list-group
-		-if controller.controller_name == 'products' && controller.action_name == 'index' && @category
+		-if controller.controller_name == 'products' && (controller.action_name == 'index' || controller.action_name == 'show') && @category
 			-if @category.children.size>0
 				-@category.children.each do |cat|
 					%li.list-group-item
 						= link_to cat.name, category_path(cat.path, cat)
 			-else
-				-@category.parent.children.each do |cat|
-					%li.list-group-item
-						-if @category == cat
-							%strong= cat.name
-						-else
-							= link_to cat.name, category_path(cat.path, cat)
-		-elsif controller.controller_name == 'ProductsController' && controller.action_name == 'show'
+				-if @category.parent
+					-@category.parent.children.each do |cat|
+						%li.list-group-item
+							-if @category == cat
+								%strong= cat.name
+							-else
+								= link_to cat.name, category_path(cat.path, cat)
 		-else
 			- Category.where({parent_id: nil}).each do |cat|
 				%li.list-group-item
