--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,20 +1,26 @@
-%h1= @title
+=render '/categories/breadcrumbs'
+.row
+	.col-sm-3
+		=render '/categories/smart_tree'
+		=render '/products/smart_filter'
+	.col-sm-9
+		%h1= @title
 
--if @category
-	.row
-		.col-md-9= @category.description
-	/ -if @category.children
-	/ 	.row
-	/ 		- @category.children.each do |child|
-	/ 			=  child.name
+		-if @category
+			.row
+				.col-md-9= @category.description
+			/ -if @category.children
+			/ 	.row
+			/ 		- @category.children.each do |child|
+			/ 			=  child.name
 
--if @products && ! @products.empty?
-	= paginate @products 
-	.row
-		- @products.each do |product|
-			=render "/products/show_item", category: @category, product: product, :cart_item=>@current_cart.cart_items.new(product_id: product.id, quantity:1)
-	= paginate @products 
--else
-	.row
-		Товары не найдены
+		-if @products && ! @products.empty?
+			= paginate @products 
+			.row
+				- @products.each do |product|
+					=render "/products/show_item", category: @category, product: product, :cart_item=>@current_cart.cart_items.new(product_id: product.id, quantity:1)
+			= paginate @products 
+		-else
+			.row
+				Товары не найдены
 
