--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -43,14 +43,14 @@
             %li
               =link_to 'Settings', '/admin/settings/edit'
             %li
-              =link_to 'Products', admin_products_path
+              =link_to Product.model_name.human.pluralize , admin_products_path
             -if !Settings.disable_categories
               %li
-                =link_to 'Categories', admin_categories_path
+                =link_to Category.model_name.human.pluralize, admin_categories_path
             %li
-              =link_to 'Pages', admin_pages_path
+              =link_to Page.model_name.human.pluralize , admin_pages_path
             %li
-              =link_to 'Promotions', admin_promotions_path
+              =link_to Promotion.model_name.human.pluralize, admin_promotions_path
         .col-sm-9
           .page-header
             %h1=@title
