--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -32,7 +32,8 @@
       .container-fixed
         .row
           .col-sm-6
-            =image_tag 'logo.png', class: 'logo'
+            =link_to root_path do
+              =image_tag 'logo.png', class: 'logo'
           .col-sm-6
             .font_0
               =Settings.site_title
