--- a/app/views/products/_show_item.html.haml
+++ b/app/views/products/_show_item.html.haml
@@ -1,9 +1,16 @@
-.col-md-3.col-sm-4.col-xs-12
+-if product.sku['expert']
+  -thumb=:expertfisher_product_list
+  -div_class='col-md-4 col-sm-6 col-xs-12'
+-else  
+  -thumb=:product_list
+  -div_class='col-md-3 col-sm-4 col-xs-12'
+
+%div{class: div_class}
   .thumbnail.shadow
     .name.text-center
       =link_to product.name, product_path(product, category)
     .image.text-center
-      =link_to image_tag(product.images.first.image.url(:product_list)), product_path(product, category) if product.images.first
+      =link_to image_tag(product.images.first.image.url(thumb)), product_path(product, category) if product.images.first
     .price.text-center
       Цена 
       =product.price_str
