--- a/app/views/categories/_smart_tree.html.haml
+++ b/app/views/categories/_smart_tree.html.haml
@@ -3,19 +3,19 @@
 		Категории
 	%ul.list-group
 		-if controller.controller_name == 'products' && (controller.action_name == 'index' || controller.action_name == 'show') && @category
-			-if @category.children.size>0
-				-@category.children.each do |cat|
+			-if @category.children.enabled.size>0
+				-@category.children.enabled.each do |cat|
 					%li.list-group-item
 						= link_to cat.name, category_path(cat.path, cat)
 			-else
 				-if @category.parent
-					-@category.parent.children.each do |cat|
+					-@category.parent.children.enabled.each do |cat|
 						%li.list-group-item
 							-if @category == cat
 								%strong= cat.name
 							-else
 								= link_to cat.name, category_path(cat.path, cat)
 		-else
-			- Category.where({parent_id: nil}).each do |cat|
+			- Category.enabled.where({parent_id: nil}).each do |cat|
 				%li.list-group-item
 					= link_to cat.name, category_path(cat.path, cat)
