--- a/app/views/cart/_cart_items.html.haml
+++ b/app/views/cart/_cart_items.html.haml
@@ -18,7 +18,7 @@
                 %span.glyphicon.glyphicon-refresh
         %td
           %small
-            = item.product.price_str(item.quantity)
+            = item.variant.price_str(item.quantity)
       %td
         =button_to item, :method => :delete, class:'btn btn-danger btn-xs' do
           %span.glyphicon.glyphicon-trash
