--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -41,12 +41,10 @@
               .font_4
                 =Settings.site_title_2
           .col-sm-3
-            %a.btn.btn-default{href: cart_path}
+            %a.btn.btn-default.btn-block{href: cart_path}
               .glyphicon.glyphicon-shopping-cart
-              В корзине  
-              = @current_cart.cart_items.count.to_s
-              товаров
-
+              =t 'cart.count', count: @current_cart.cart_items.count
+            %br
             =form_tag catalog_search_path, method: 'get', id: 'search_form', role: 'search' do
               .input-group
                 %input.form-control{type:"text", placeholder:"Поиск", name: "text"}
