--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -57,9 +57,9 @@ $brand-primary: #31464C;
 
 .header,.footer{
   background-color: $brand-primary;
-  margin-bottom: 10px;
+  /*margin-bottom: 10px;
+  padding: 10px;*/
   color: white;
-	padding: 10px;
 	text-align: center;
   ul{
    text-align: left;  
