--- a/app/assets/stylesheets/admin/products.css.scss
+++ b/app/assets/stylesheets/admin/products.css.scss
@@ -17,13 +17,13 @@ img.preview{
     font-size: 45px;
 }
 
-#sortable { 
+.sortable { 
 	list-style-type: none; 
 	margin: 0; 
 	padding: 0; 
 	width: 538px; 
 }
-#sortable li {
+.sortable li {
 	float: left; 
 	width: 64px; 
 	height: 88px; 
