--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,10 +31,18 @@
     %header.header
       .container-fixed
         .row
-          .col-sm-3
+          .col-sm-2
             =link_to root_path do
               =image_tag 'logo.png', class: 'logo'
-          .col-sm-6
+          .col-sm-2.contacts
+            Г.&nbsp;Калуга, ул.&nbsp;Рылеева,&nbsp;д.&nbsp;2
+            %br
+            Будни: 8:00 - 19:00
+            %br
+            Выходные: 08:00 - 17:00
+            .phone
+              8 (920) 618-00-50
+          .col-sm-5
             .font_0
               =Settings.site_title
             -if Settings.site_title_2
@@ -92,10 +100,14 @@
     %footer.footer
       .container-fixed
         .row
-          .col-sm-4
-            Мы работаем для Вас будни: 8:00 - 19:00 суббота, воскресенье : 08:00 - 17:00
-            %h4
-              +7 920 618 00 50
+          .col-sm-4.contacts
+            Г.&nbsp;Калуга, ул.&nbsp;Рылеева,&nbsp;д.&nbsp;2
+            %br
+            Будни: 8:00 - 19:00
+            %br
+            Выходные: 08:00 - 17:00
+            .phone
+              8 (920) 618-00-50
           .col-sm-4
             Принимаем к оплате
             =image_tag('payment_methods.png')
@@ -107,7 +119,7 @@
                 %li
                   =link_to page.name, page_path(page)
         %hr
-        &copy; Интернет-магазин «Рыбалофф» 2001–2015
+        &copy; Интернет-магазин «Рыболофф» 2001–2015
         .small
           Сайт Рыболофф разрешает вам просматривать и загружать материалы этого сайта (далее «Сайт») только для личного некоммерческого использования, при условии сохранения вами всей информации об авторском праве и других сведений о праве собственности, содержащихся в исходных материалах и любых их копиях. Запрещается изменять материалы этого Сайта, а также распространять или демонстрировать их в любом виде или использовать их любым другим образом для общественных или коммерческих целей. Любое использование этих материалов на других сайтах или в компьютерных сетях запрещается. 
     <!-- Yandex.Metrika counter -->
