--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -52,7 +52,7 @@ $brand-primary: #31464C;
 }
 
 .font_4 {
-    font: 35px/1.3em "kelly slab",fantasy;
+    font: 29px/1.3em "kelly slab",fantasy;
 }
 
 .header,.footer{
@@ -65,6 +65,14 @@ $brand-primary: #31464C;
    text-align: left;  
     a{
       color: inherit;  
+    }
+  }
+  .contacts{
+    font-size: 8pt;
+    text-align: left;   
+    .phone{
+      font-size: 13pt;
+      font-weight: 600;
     }
   }
 }
