--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -1,3 +1,4 @@
+= paginate @categories
 %table.table.table-striped
   %thead
     %tr
@@ -14,5 +15,6 @@
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_admin_category_path(category), :class => 'btn btn-xs btn-default'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), admin_category_path(category), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+= paginate @categories
 
 = link_to t('.new', :default => t("helpers.links.new")), new_admin_category_path, :class => 'btn btn-primary'
