--- a/app/views/admin/promotions/index.html.haml
+++ b/app/views/admin/promotions/index.html.haml
@@ -1,3 +1,4 @@
+= paginate @promotions
 %table.table.table-striped
   %thead
     %tr
@@ -18,5 +19,6 @@
         %td
           = link_to t('.edit', :default => t("helpers.links.edit")), edit_admin_promotion_path(promotion), :class => 'btn btn-xs btn-default'
           = link_to t('.destroy', :default => t("helpers.links.destroy")), admin_promotion_path(promotion), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
+= paginate @promotions
 
 = link_to t('.new', :default => t("helpers.links.new")), new_admin_promotion_path, :class => 'btn btn-primary'
