--- a/app/views/admin/categories/_form.html.haml
+++ b/app/views/admin/categories/_form.html.haml
@@ -10,7 +10,7 @@
       = f.input :name
       = f.input :description, as: :ckeditor, input_html: {ckeditor: {toolbar: [{name: 'Edit', items: ['Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ]}, {name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ], items: [ 'Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'RemoveFormat' ]}, {name: 'Other', items:['Source', 'Image', 'Table']} ]}}
       = f.input :enabled
-      = f.input :external_id
+      = f.input :external_id, as: :string, label: 'External id'
       = f.association :parent, label_method: lambda { |cat| cat.name_with_path }, collection: Category.all.sort {|a,b| a.name_with_path <=> b.name_with_path}
       = f.association :linked_categories
       = f.association :linked_products
